--- a/css/general.css
+++ b/css/general.css
@@ -4,6 +4,10 @@ body {
 	line-height: 26px;
 }
 
+p {
+	margin-bottom: 20px; /* font-size */
+}
+
 hr {
 	margin-top: 10px;
 }
@@ -20,6 +24,12 @@ hr {
 	margin-top: 30px;
 	text-align: center;
 }
+
+#about p {
+	margin-bottom: 10px; /* from bootstrap */
+}
+
+
 
 
 div.blog-row{
@@ -41,5 +51,9 @@ h1 a, h1 a:hover{
     color: #333;
 
     text-decoration: none;
+}
+
+#disqus_thread {
+	margin-top: 60px;
 }
 
